# sssim

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt  io.cpp  io.hpp  log.hpp  result.hpp
src/: graphics.hpp  main.cpp  shaders.cpp  shaders.hpp  shape.cpp  shape.hpp  window.cpp  window.hpp
